# PingMaster

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
app/: ci_server.py  monitor.py  pyproject.toml
tests/: ci_server.py  test_monitor.py
tests/integration/: test_monitor.py  test_ping.py  test_ping_integration.py
tests/unit/: test_load_config.py  test_monitor.py  test_ping.py
