[tool.poetry]
name = "pingmaster"
version = "0.1.0"
description = "A FastAPI microservice to monitor websites"
authors = ["Paul paul@paullowther.dev"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"
poetry-core = ">=1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
